<resources>
    <string name="app_name">JetDC</string>
    <string name="tempDensity_name">Temperature Density Calculator</string>
    <string name="batchDensity_name">Batch Density Calculator</string>
    <string name="settings_name">Settings</string>
    <string name="image_name">Image</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_density_at_15c">Enter density at 15°C</string>
    <string name="enter_a_value_between_10_and_50">Enter a value between -40 and +50</string>
    <string name="result">RESULT</string>
    <string name="enter_a_value_between_775_and_840">Enter a value between 775 and 840</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="calculate">Calculate</string>
    <string name="return_to_main_menu">Return To Main Menu</string>
    <string name="return_from_batch_to_menu">Return From Batch to Menu</string>
    <string name="enter_amount_litres">Enter Amount (litres)</string>
    <string name="todo">TODO</string>
    <string name="made_by_https_github_com_tedmartell_2024">Made by https://github.com/TedMartell 2024</string>
    <string name="get_density_at_15_c">Get Density at 15ºC</string>
    <string name="get_mixed_batch_density">Get mixed batch density</string>
    <string name="get_density_at_x_c">Get Density at X ºC</string>
    <string name="jet_a1_density_calculator">Jet-A1 Density Calculator</string>
    <string name="description">Description:
    This app is designed to calculate the density of Jet-A1 aviation fuel, it runs 3 different calculations with different inputs.
        The "Get Density at 15C" and "Get Density at x_C, are both dependent on a ALPHA value(the coefficient on how much the density changes per one degree Celsius)
        The Alpha value is set at 0.0009 as default.
        But if you are dealing with perhaps another supplier this value can vary.
        Hence below is the option to change and save a new ALPHA Value if needed. DISCLAIMER this app is not made together with or is in affiliation with any Aviation Fuel provider.
        It is crucial that you check your own inputs and values against the criteria of your work. JetDC does not take any responsibility of any wrongly used values potentially taken from this application!

    </string>
    <string name="save">SAVE</string>
</resources>