<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0e9d6"
    android:fitsSystemWindows="true"
    tools:context=".TempCalcActivity">


    <EditText
        android:id="@+id/currentTempInput"
        android:layout_width="263dp"
        android:layout_height="91dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="91dp"
        android:backgroundTint="#162636"
        android:ems="10"
        android:hint="@string/enter_a_value_between_10_and_50"

        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        android:textColor="#162636"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="164dp"
        android:layout_height="40dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="32dp"
        android:labelFor="@id/currentTempInput"
        android:text="@string/enter_temperature"
        android:textAlignment="center"
        android:textColor="#162636"
        app:layout_constraintBottom_toTopOf="@+id/currentBatchInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTempInput" />

    <EditText
        android:id="@+id/currentBatchInput"
        android:layout_width="263dp"
        android:layout_height="91dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="92dp"
        android:autofillHints=""
        android:backgroundTint="#162636"
        android:ems="10"
        android:hint="@string/enter_a_value_between_775_and_840"

        android:inputType="numberDecimal"
        android:outlineProvider="paddedBounds"
        android:textAlignment="center"
        android:textColor="#162636"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204dp"
        android:layout_height="28dp"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="131dp"
        android:labelFor="@id/currentBatchInput"
        android:text="@string/enter_density_at_15c"
        android:textAlignment="center"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentBatchInput" />

    <Button
        android:id="@+id/calcTempDensityButton"
        android:layout_width="140dp"
        android:layout_height="63dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="103dp"
        android:backgroundTint="#162636"
        android:text="@string/calculate"
        android:textColor="#f0e9d6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/resultCalcTempDensity"
        android:layout_width="263dp"
        android:layout_height="91dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:backgroundTint="#162636"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/result"
        android:inputType="none"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#162636"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f0e9d6"
        android:contentDescription="@string/return_to_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="#162636" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="114dp"
        android:text="Density at Given Temperature"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultCalcTempDensity" />
</androidx.constraintlayout.widget.ConstraintLayout>