<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#162636"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/jet_a1_density_calculator"
        android:textAlignment="center"
        android:textColor="#f0e9d6"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="57dp"
        android:background="#f0e9d6"
        android:onClick="openNewActivity"
        android:text="@string/get_density_at_x_c"
        android:textColor="#162636"

        android:textColorLink="#FBFBFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="24dp"
        android:background="#f0e9d6"
        android:onClick="openBatchCalcActivity"
        android:text="@string/get_mixed_batch_density"
        android:textColor="#162636"
        app:layout_constraintBottom_toTopOf="@+id/refTempActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="16dp"
        android:text="@string/made_by_https_github_com_tedmartell_2024"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/refTempActivityButton"
        android:layout_width="297dp"
        android:layout_height="53dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:background="#f0e9d6"
        android:backgroundTint="#f0e9d6"
        android:onClick="openRefTempCalcActivity"
        android:text="@string/get_density_at_15_c"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageButton
        android:id="@+id/settingsActivityButton"
        android:layout_width="61dp"
        android:layout_height="54dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="31dp"
        android:backgroundTint="#162636"
        android:onClick="openSettingsActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refTempActivityButton"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        app:tint="#f0e9d6" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="282dp"
        android:layout_height="277dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/jdc_logo_1" />

</androidx.constraintlayout.widget.ConstraintLayout>