<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0e9d6"
    tools:context=".refTempCalcActivity">

    <EditText
        android:id="@+id/currTempInput"
        android:layout_width="263dp"
        android:layout_height="91dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/enter_a_value_between_10_and_50"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        android:textColor="#162636"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currTempInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="123dp"
        android:text="Enter Current Temperature"
        android:textAlignment="center"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currTempInput" />

    <Button
        android:id="@+id/refTempCalcResultButton"
        android:layout_width="129dp"
        android:layout_height="66dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#162636"
        android:text="@string/calculate"
        android:textColor="#f0e9d6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/currentBatchDensityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:text="Enter Density at Current Temperature"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currBatchDensityInput" />

    <EditText
        android:id="@+id/refTempCalcResult"
        android:layout_width="263dp"
        android:layout_height="91dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#162636"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentBatchDensityInput" />

    <ImageButton
        android:id="@+id/refTempCalcReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#f0e9d6"
        app:layout_constraintBottom_toTopOf="@+id/currTempInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="#162636" />

    <EditText
        android:id="@+id/currBatchDensityInput"
        android:layout_width="263dp"
        android:layout_height="91dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/enter_a_value_between_775_and_840"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#162636"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currTempInputLabel" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="157dp"
        android:text="Density at 15ºC"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refTempCalcResult" />
</androidx.constraintlayout.widget.ConstraintLayout>