<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0e9d6"
    tools:context=".BatchCalcActivity">

    <EditText
        android:id="@+id/currentFuelVolumeInput"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#162636"
        android:ems="10"
        android:hint="@string/enter_amount_litres"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldBatchText" />

    <TextView
        android:id="@+id/labelCurrFuelDensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="148dp"
        android:text="Enter Fuel Density:"
        android:textAlignment="center"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currFuelDensityInput" />

    <TextView
        android:id="@+id/oldBatchText"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="163dp"
        android:text="Old Batch:"
        android:textAlignment="textStart"
        android:textColor="#162636"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/currentFuelVolumeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/returnFromBatchButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <EditText
        android:id="@+id/currFuelDensityInput"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#162636"
        android:ems="10"
        android:hint="@string/enter_a_value_between_775_and_840"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentFuelVolumeInput" />

    <TextView
        android:id="@+id/labelCurrFuelVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:labelFor="@id/currentFuelVolumeInput"
        android:text="Enter Fuel Volume (litres):"
        android:textAlignment="center"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentFuelVolumeInput" />

    <EditText
        android:id="@+id/addedFuelVolumeInput"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#162636"
        android:ems="10"
        android:hint="@string/enter_amount_litres"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBatchText" />

    <TextView
        android:id="@+id/labelResultBatchDensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="3dp"
        android:labelFor="@id/resultCalcBatchDensity"
        android:text="Your New Batch Density is:"
        android:textColor="#162636"
        app:layout_constraintBottom_toTopOf="@+id/calculateBatchDensityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultCalcBatchDensity" />

    <EditText
        android:id="@+id/addedFuelDenistyInput"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#162636"
        android:ems="10"
        android:hint="@string/enter_a_value_between_775_and_840"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/labelAddedFuelDensity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedFuelVolumeInput" />

    <EditText
        android:id="@+id/resultCalcBatchDensity"
        android:layout_width="279dp"
        android:layout_height="75dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="67dp"
        android:autofillHints=""
        android:backgroundTint="#162636"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/result"
        android:inputType="none"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#162636"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAddedFuelDensity" />

    <Button
        android:id="@+id/calculateBatchDensityButton"
        android:layout_width="117dp"
        android:layout_height="62dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#162636"
        android:onClick="calcBatchDensity"
        android:text="Calculate"
        android:textColor="#f0e9d6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelResultBatchDensity" />

    <TextView
        android:id="@+id/labelAddedFuelDensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:labelFor="@id/addedFuelDenistyInput"
        android:text="Enter Added Fuel Density:"
        android:textColor="#162636"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedFuelDenistyInput" />

    <TextView
        android:id="@+id/labelAddedFuelVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="16dp"
        android:labelFor="@id/addedFuelVolumeInput"
        android:text="Enter Added Fuel Volume (litres):"
        android:textColor="#162636"
        app:layout_constraintBottom_toTopOf="@+id/addedFuelDenistyInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedFuelVolumeInput"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/returnFromBatchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#f0e9d6"
        android:contentDescription="@string/return_from_batch_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="#162636" />

    <TextView
        android:id="@+id/newBatchText"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="8dp"
        android:text="New Batch:"
        android:textAlignment="textStart"
        android:textColor="#162636"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addedFuelVolumeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>